--- a/config.ini.example
+++ b/config.ini.example
@@ -26,7 +26,7 @@ alwaysShowLatestEpisodeFirst = True
 
 # backToBackException:                   If there's this many additional episodes BESIDES the first episode, we"ll show the episode, so setting to 4 means 5 episodes back to back will show 2 episodes (set this to 0 to disable it)
 
-# backToBackShowFirstAndLast:            When the backtoback exception applies, show the last and first episode of the season instead of what should be there
+# backToBackShowFirstAndLast:            When the backtoback exception applies, show the first episode of the season instead of what should be there
 
 # backToBackExceptionOverridesLimit:     When the backtoback exception applies, override the per-series limit
 
